Add file count to `PalantirFormatModule` output (#4495)
Having a quick quantitative feedback what goes on is always nice and
helps spotting issues.

Pull request: https://github.com/com-lihaoyi/mill/pull/4495