@@ -4,53 +4,8 @@ package javalib.palantirformat
 import mill.api.{Loose, PathRef}
 import mill.define.{Discover, ExternalModule}
 import mill.main.Tasks
-import mill.scalalib.{CoursierModule, DepSyntax, JavaModule}
+import mill.scalalib.JavaModule
 import mill.util.Jvm
-
-trait PalantirFormatBaseModule extends CoursierModule {
-
-  /**
-   * Classpath for running Palantir Java Format.
-   */
-  def palantirformatClasspath: T[Loose.Agg[PathRef]] = Task {
-    defaultResolver().resolveDeps(
-      Agg(ivy"com.palantir.javaformat:palantir-java-format:${palantirformatVersion()}")
-    )
-  }
-
-  /**
-   * JVM arguments for running Palantir Java Format. Defaults to values prescribed in
-   * "[[https://github.com/palantir/palantir-java-format/issues/548 Broken on Java 16]]".
-   */
-  def palantirformatJvmArgs: T[Seq[String]] = Task {
-    Seq(
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    )
-  }
-
-  /**
-   * Path to options file for Palantir Java Format CLI. Defaults to `millSourcePath` `/` `palantirformat.options`.
-   */
-  def palantirformatOptions: T[PathRef] = Task.Source(
-    millSourcePath / "palantirformat.options"
-  )
-
-  /**
-   * Palantir Java Format version. Defaults to `2.50.0`.
-   */
-  def palantirformatVersion: T[String] = Task {
-    "2.50.0"
-  }
-}
 
 /**
  * Formats Java source files using [[https://github.com/palantir/palantir-java-format Palantir Java Format]].
@@ -84,6 +39,7 @@ trait PalantirFormatModule extends JavaModule with PalantirFormatBaseModule {
     )
   }
 }
+
 object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule with TaskModule {
 
   override def defaultCommandName(): String = "formatAll"
@@ -122,16 +78,25 @@ object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule
       jvmArgs: Seq[String]
   )(implicit ctx: api.Ctx): Unit = {
 
+    val javaFiles = sources
+      .iterator
+      .map(_.path)
+      .filter(os.exists(_))
+      .flatMap(os.walk(_, includeTarget = true))
+      .filter(os.isFile)
+      .filter(_.ext == "java")
+      .toSeq
+
     if (check) {
-      ctx.log.info("checking format in java sources ...")
+      ctx.log.info(s"checking format in ${javaFiles.size} java sources ...")
     } else {
-      ctx.log.info("formatting java sources ...")
+      ctx.log.info(s"formatting ${javaFiles.size} java sources ...")
     }
 
-    palantirArgs(sources, check, options) match {
+    palantirArgs(javaFiles, check, options) match {
       case None =>
 
-        ctx.log.debug("source folder not found, skipping")
+        ctx.log.debug("No sources found, skipping")
       case Some(mainArgs) =>
 
         ctx.log.debug(s"running palantirformat with $mainArgs")
@@ -156,22 +121,12 @@ object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule
   }
 
   private def palantirArgs(
-      sources: IterableOnce[PathRef],
+      sourceFiles: Seq[os.Path],
       check: Boolean,
       options: PathRef
   ): Option[Seq[String]] = {
 
-    val sourceArgs = sources
-      .iterator
-      .map(_.path)
-      .filter(os.exists(_))
-      .flatMap(os.walk(_, includeTarget = true))
-      .filter(os.isFile)
-      .filter(_.ext == "java")
-      .map(_.toString())
-      .toSeq
-
-    Option.when(sourceArgs.nonEmpty) {
+    Option.when(sourceFiles.nonEmpty) {
       val args = Seq.newBuilder[String]
 
       // https://github.com/palantir/palantir-java-format/blob/dae9be4b84e2bd4d7ea346c6374fda47eee7118f/palantir-java-format/src/main/java/com/palantir/javaformat/java/CommandLineOptionsParser.java#L199
@@ -187,7 +142,7 @@ object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule
       }
 
       // https://github.com/palantir/palantir-java-format/blob/dae9be4b84e2bd4d7ea346c6374fda47eee7118f/palantir-java-format/src/main/java/com/palantir/javaformat/java/CommandLineOptionsParser.java#L49
-      args ++= sourceArgs
+      args ++= sourceFiles.map(_.toString)
 
       args.result()
     }
